--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "dva": "^2.4.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "omit.js": "^1.0.2",
     "path-to-regexp": "^3.1.0",
     "qs": "^6.9.0",
@@ -72,6 +73,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-router": "^4.3.1",
     "redux": "^4.0.1",
     "slash2": "^2.0.0",
     "umi": "^2.9.6",
